--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,14 +5,14 @@ Version: 0.1.0
 Author: Daniel Perez Vicencio
 Maintainer: The package maintainer <dvicencio947@gmail.com>
 Description: A package to calculate Cardiovascular Risk Scores in large dataframes
-License:UoE
+License: UoE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Depends: 
   R (>= 4.3.0),
-  tidyverse (>= 2.0.0),
+  dplyr (>= 1.1.2),
   PooledCohort (>= 0.0.1)
 Imports: 
-  tidyverse (>= 2.0.0),
+  dplyr (>= 1.1.2),
   PooledCohort (>= 0.0.1)
