--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Daniel Perez Vicencio
 Maintainer: The package maintainer <dvicencio947@gmail.com>
 Description: A package to calculate Cardiovascular Risk Scores in large dataframes
-License: UoE
+License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
