--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,7 @@ Depends:
   R (>= 4.3.0),
   dplyr (>= 1.1.2),
   PooledCohort (>= 0.0.1)
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
