--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: RiskScorescvd
 Type: Package
-Title: What the Package Does (Cardiovascular Risk Scores Calculator)
+Title: Cardiovascular Risk Scores Calculator
 Version: 0.1.0
 Author: Daniel Perez Vicencio
-Maintainer: The package maintainer <dvicencio947@gmail.com>
-Description: A package to calculate Cardiovascular Risk Scores in large dataframes
+Maintainer: dvicencio947@gmail.com
+Description: A package to calculate Cardiovascular Risk Scores in large data frames
 License: MIT
 Encoding: UTF-8
 LazyData: true
