--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,14 +18,16 @@ Description: A tool to calculate Cardiovascular Risk Scores in large data frames
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Depends: 
   R (>= 3.1.0),
   dplyr (>= 1.1.2),
   PooledCohort (>= 0.0.1)
-Suggests: 
+Suggests:
     knitr,
     rmarkdown,
+    tibble,
+    purrr,
     testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
