--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(GRACE_scores)
 export(HEART)
 export(HEART_scores)
 export(SCORE2)
+export(SCORE2_CKD)
+export(SCORE2_CKD_scores)
 export(SCORE2_scores)
 export(TIMI)
 export(TIMI_scores)
