Added new function to do symmetric rounding.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,12 @@ export(HEART_scores)
 export(SCORE2)
 export(SCORE2_CKD)
 export(SCORE2_CKD_scores)
+export(SCORE2_Diabetes)
 export(SCORE2_scores)
 export(TIMI)
 export(TIMI_scores)
 export(calc_scores)
+export(round_to_nearest_digit)
 importFrom(PooledCohort,predict_10yr_ascvd_risk)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,case_when)
