--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,7 @@ Description: A tool to calculate Cardiovascular Risk Scores in large data frames
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Depends: 
   R (>= 3.1.0),
   dplyr (>= 1.1.2),
@@ -36,5 +36,5 @@ Suggests:
     testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
-URL: https://github.com/dvicencio/RiskScorescvd
+URL: https://github.com/dvicencio/RiskScorescvd, https://dvicencio.github.io/RiskScorescvd/
 BugReports: https://github.com/dvicencio/RiskScorescvd/issues
