Added new function SCORE2-Asia-Pacific

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(GRACE_scores)
 export(HEART)
 export(HEART_scores)
 export(SCORE2)
+export(SCORE2_Asia_Pacific)
 export(SCORE2_CKD)
 export(SCORE2_CKD_scores)
 export(SCORE2_Diabetes)
